--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -12,18 +12,20 @@
       - if current_user.present?
         %a.btn-navbar-left.btn-navbar-navtoggle.btn-flyout-left-trigger
           %i.fa.fa-dashboard.fa-fw
-
+      - else
+        %a.no-hover.site-title.mobile{:href => root_url } GradeCraft
       %nav.the-nav.nav-collapse.clearfix{:role => "navigation"}
         %ul.nav.nav-pill.left
           %li
-            %a.no-hover.site-title{:href => dashboard_path}
-              - if current_course
+            - if current_course
+              %a.no-hover.site-title{:href => dashboard_path}
                 %span.course.left= "#{current_course.courseno} "
                 %span.course_name.left.hidden-med= "#{current_course.name} "
                 %span.course_semester.left.hidden-med.hidden-sm= "#{current_course.try(:semester)} #{current_course.try(:year)}"
                 - if current_course.tagline?
                   %span.tagline.left.hidden-med.hidden-sm= current_course.try(:tagline)
-              - else
+            - else
+              %a.no-hover.site-title{:href => root_url }
                 GradeCraft
         %ul.nav.nav-pill.right
           - if current_user
