--- a/app/views/layouts/navigation/_login_nav.haml
+++ b/app/views/layouts/navigation/_login_nav.haml
@@ -1,7 +1,3 @@
-%li.dropdown       
-  %a.section-title{:href => "#", :title => "Log in to GradeCraft"} 
-    Login
-    %i.fa.fa-caret-down.hidden-sm
-  %ul.subnav.logged-out
-    %li= link_to "Log in with UM", "https://weblogin.umich.edu", :class => "button"
-    %li= link_to "Log in via GradeCraft", new_user_session_path, :class => "button"
+.login-buttons
+  = link_to "Log in with UM", "https://weblogin.umich.edu", :class => "um-login button"
+  = link_to "Log in via GradeCraft", new_user_session_path, :class => "gc-login button"
