--- a/app/views/assignments/_buttons.html.haml
+++ b/app/views/assignments/_buttons.html.haml
@@ -6,6 +6,7 @@
           %i.fa.fa-plus.fa-fw
           New #{(term_for :assignment).titleize}
       %li= link_to raw('<i class="fa fa-edit fa-fw"> </i> Edit'), edit_assignment_path(presenter.assignment)
+      %li= link_to raw('<i class="fa fa-copy fa-fw"> </i> Copy'), copy_assignments_path(id: presenter.assignment), method: :copy
       - if presenter.assignment.has_groups?
         %li= link_to raw("<i class='fa fa-users fa-fw'> </i> Create #{term_for :group}"), new_group_path
       - if presenter.for_team? && !presenter.rubric_available?
