Responsive top bar when logged out

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -71,6 +71,7 @@ $media-xlarge-max:  120rem; //
 @import 'grid';
 @import 'homepage';
 @import 'icons';
+@import 'login';
 @import 'layout';
 @import 'rubrics';
 @import 'staff_sidebar';
