--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -128,15 +128,10 @@
   z-index: 1000 
   height: 40px !important
   display: inline
-  margin: 0
-  padding: 0
   background: $color-blue-00
-  margin-bottom: .5rem
-  padding: 0
 
 @media (max-width: $media-small-max)
-  .navbar .nav-collapse
-    display: none
+
   ul.subnav
     margin: 0
     padding: 0
@@ -155,19 +150,14 @@
     color: $color-white
     padding: 5px 10px
 
-  li a.site-title
-    display: block
-    line-height: 1.4rem
-    color: $color-white
-    padding: 2px 10px
-    margin-bottom: 25px
-
 img.profile-pic
   position: relative
   left: -5px
   margin: 0 0 -5px -5px 
   padding: 0
 
+a.site-title
+  color: $color-blue-3
 
 /* Large Screen Styles*/ 
 @media (min-width: $media-small-max)
@@ -291,7 +281,6 @@ ul.subnav.logged-out
   .button:hover
     background-color: $color-blue-2
 
-
 .offscreen-sidebar
   display: none
 
@@ -303,22 +292,42 @@ ul.subnav.logged-out
 
 @media (max-width: $media-small-max)
 
-  a.site-title
-    color: $color-blue-4
-    line-height: 2.44rem
-    padding: 0 0 0 1rem !important
+  .navbar .nav-collapse
+    display: none
+
+  .navbar .nav-collapse .logged-in a.site-title
+    display: block
+    line-height: .75rem
+
+  .navbar
+    height: auto !important
+
+  .navbar .mobile-nav
+    line-height: 1
+    padding-top: 0
+
+    .nav.nav-pill
+      width: 100% !important
+      text-align: center
+
+    .site-title
+      padding: 0
+      margin-left: -6rem
+
+    .login-buttons
+      padding-top: 0 !important
 
   .hidden-sm
     display: none
 
-  ul.nav.nav-pill.right .login-buttons
-    display: block !important
+@media (min-width: $media-small-max)
+  .hidden-med-and-up
+    display: none
+
 
 @media (min-width: $media-small-max) and (max-width: $media-medium-max)
   .hidden-med
     display: none
-
-  .logged-out
 
 .container
   width: 95%
