--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -12,8 +12,6 @@
       - if current_user.present?
         %a.btn-navbar-left.btn-navbar-navtoggle.btn-flyout-left-trigger
           %i.fa.fa-dashboard.fa-fw
-      - else
-        %a.no-hover.site-title.mobile{:href => root_url } GradeCraft
       %nav.the-nav.nav-collapse.clearfix{:role => "navigation"}
         %ul.nav.nav-pill.left
           %li
@@ -31,6 +29,13 @@
           - if current_user
             = render 'layouts/navigation/authenticated_nav'
           - else
+            = render 'layouts/navigation/login_nav'
+      - if ! current_user
+        %nav.mobile-nav.hidden-med-and-up
+          %ul.nav.nav-pill.left 
+            %a.no-hover.site-title{:href => root_url }
+              GradeCraft
+          %ul.nav.nav-pill.right
             = render 'layouts/navigation/login_nav'
 
       - if current_user.present?
