Added signup page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,6 +74,7 @@ $media-xlarge-max:  120rem; //
 @import 'login';
 @import 'layout';
 @import 'rubrics';
+@import 'signup';
 @import 'staff_sidebar';
 @import 'student_sidebar';
 @import 'student_subnav';
