--- a/app/views/pages/um_pilot.haml
+++ b/app/views/pages/um_pilot.haml
@@ -1,6 +1,5 @@
-%section.login
-  .columns.password-forgot.half
-    %h2.bold Are you interested in using GradeCraft? 
-    %p Tell us a little bit about your course and we'll be in touch shortly to get you set up.
+%section.pilot
+  %h1.bold Are you an instructor at UM interested in using GradeCraft? 
+  %p Tell us a little bit about your course and we'll be in touch shortly to get you set up.
 
-    <iframe src="https://docs.google.com/a/umich.edu/forms/d/1AzqyS-vDUxvyohO_5mYOYRYqvJkA9_o74_ZPokRVwew/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  <iframe src="https://docs.google.com/a/umich.edu/forms/d/1AzqyS-vDUxvyohO_5mYOYRYqvJkA9_o74_ZPokRVwew/viewform?embedded=true" width="730" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
