--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -1,11 +1,13 @@
-section.features
+section
+  clear: both
   position: relative
   min-width: 700px
   max-width: 1500px
   margin: 0 auto
-  padding: 4rem   
-  background-color: $color-white
-  opacity: .6
+  padding: 2rem   
+  min-height: 400px
+  height: auto
+  background-color: $color-blue-3
 
 .alert-bkg
   width: 100% !important
@@ -14,38 +16,8 @@ section.features
   opacity: .8
   background-color: $color-blue-3
 
-.video-container, .newsletter-container, .press-container
-  width: 100% !important
-  margin: 0
-
-.newsletter-container
-  background-color: $color-blue-3
-  opacity: .8
-  padding: 2rem 0
-
-  input.button 
-    background-color: $color-blue-0 !important
-
-.video-promo, .newsletter
-  padding: 2rem
-
-.press-container
-  background-color: $color-blue-0
-  opacity: .9
-  color: $color-black
-  margin: 0
-  padding: 0
-
-.video-container
-  background-color: $color-blue-3
-  opacity: .9
-  height: 100%
 
 section.video-promo, section.newsletter, section.press, section.forgot-password, section.login
-  min-width: 700px
-  max-width: 1500px
-  margin: 0 auto
-  height: 400px
 
   h1
     margin-top: 1rem
@@ -94,22 +66,6 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
       width: 100%
       height: 80%
 
-  .login
-    form
-      width: 100%
-      margin: 0
-      padding: 0
-      input
-        padding: .5rem
-        width: 95%
-        border: 0
-        margin-bottom: .75rem
-      input:focus
-        background-color: $color-green-3
-        color: $color-white !important
-
-      .button
-        bottom: 1rem
 
 @media (max-width: $media-small-max)
 
@@ -117,7 +73,7 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
     width: 100%
     font-size: .7rem
     padding: 1rem
-    height: auto !important
+    height: auto
 
     p 
       margin: 0 0 .25rem
@@ -139,4 +95,3 @@ section.video-promo, section.newsletter, section.press, section.forgot-password,
         height: auto
         padding: 0
         margin: 0
-
