--- a/app/assets/stylesheets/_login.sass
+++ b/app/assets/stylesheets/_login.sass
@@ -1,7 +1,7 @@
 section.login
-  padding: 3rem 1rem !important
+  padding: 4rem 1rem !important
   width: 100%
-  min-height: 200px
+  min-height: 300px
   background-color: $color-yellow-1
   opacity: .7
 
@@ -13,7 +13,6 @@ section.login
     position: relative
 
   #gradecraft-auth
-    position: relative
     padding-right: 1rem
     margin-right: 1rem
 
@@ -27,6 +26,23 @@ section.login
     border-radius: $global-radius
     input.input
       width: 12rem
+
+  .login
+    form
+      width: 100%
+      margin: 0
+      padding: 0
+      input
+        padding: .5rem
+        width: 95%
+        border: 0
+        margin-bottom: .75rem
+      input:focus
+        background-color: $color-green-3
+        color: $color-white !important
+
+      .button
+        bottom: 1rem
 
 @media (max-width: $media-small-max)
   section.login
