--- a/app/views/students/sidebar/_sidebar_badges.haml
+++ b/app/views/students/sidebar/_sidebar_badges.haml
@@ -4,36 +4,13 @@
   %ul.block-grid
     - cache multi_cache_key :student_sidebar_badges, current_student, current_course do
       - current_student.unique_student_earned_badges(current_course).includes(:unlock_conditions).each do |badge|
-        - cache ["v1", badge] do
-          %li
-            - if badge.point_total.present? && badge.point_total > 0
-              - if badge.is_unlockable?
-                - if badge.is_unlocked_for_student?(current_student)
-                  %a
-                    %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
-                  .display_on_hover.hover-style.right
-                    %i.fa.fa-unlock-alt= " #{badge.name}, #{badge.point_total} points"
-                - else
-                  %a
-                    %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
-                  .display_on_hover.hover-style.right
-                    %i.fa.fa-lock= " #{badge.name}, #{badge.point_total} points"
-              - else
-                %a
-                  %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned" }
-                .display_on_hover.hover-style.right
-                  ="#{badge.name}, #{badge.point_total} points"
-            - else
-              %a
-                %img{:src => badge.icon, :alt => "You've earned the #{badge.name} badge", :class => "earned"}
-              .display_on_hover.hover-style.right
-                = "#{badge.name}"
+        %li= sidebar_earned_badge badge, current_student
 
       - current_student.student_visible_unearned_badges(current_course).each do |badge|
         - cache ["v1", badge] do
           %li
             %a
-              %img{:src => badge.try(:icon), :alt => "#{badge.try(:name)}", :class => "unearned"}
+              %img{:src => badge.icon, :alt => badge.name, :class => "unearned"}
             .display_on_hover.hover-style.right
               = "Not yet earned: #{badge.name}"
 
