--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -63,6 +63,7 @@ $media-xlarge-max:  120rem; //
 @import 'debug';
 @import 'collapse';
 @import 'context_menu';
+@import 'features';
 @import 'forms';
 @import 'predictor';
 @import 'ribbon_mixins';
