--- a/app/views/home/_newsletter_signup.haml
+++ b/app/views/home/_newsletter_signup.haml
@@ -1,9 +1,9 @@
 %section.newsletter
-  .columns.half
+  .columns.half.signup
     %h1 Sign Up for Our Newsletter
     %p Our intent is to create a tool that makes it easy for anyone to create and manage a gameful course. We're piloting a new and more generalizable version of GradeCraft during the fall semester of 2015, and our hope is that we can make it available for anyone to use in the near future. Sign up for our newsletter to be the first to hear when that happens!
 
-  .columns.half
+  .columns.half.signup-form
     <link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
     <div id="mc_embed_signup">
     <form action="//gradecraft.us10.list-manage.com/subscribe/post?u=327d145979b0ee62cf25c3dad&amp;id=a13009377f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
