--- a/app/assets/stylesheets/_login.sass
+++ b/app/assets/stylesheets/_login.sass
@@ -12,18 +12,30 @@ section.login
   .columns
     position: relative
 
+  .login-form
+    background-color: $color-green-2
+    border-left: 10px solid $color-white
+    border-radius: $global-radius
+    padding: 1rem
+    height: 200px
+
+
   #gradecraft-auth
     padding-right: 1rem
-    margin-right: 1rem
+    margin-right: 3rem
+    width: 100%
 
     input
       width: 100%
 
   #password-forgot
+    margin-left: 1rem
     background-color: $color-blue-4
     border-left: 10px solid $color-white
     padding: 1rem
     border-radius: $global-radius
+    width: 40%
+    height: 200px
     input.input
       width: 12rem
 
@@ -47,13 +59,16 @@ section.login
 @media (max-width: $media-small-max)
   section.login
     min-height: 100%
-    padding: 4rem 1rem 1rem !important
+    padding: 3rem 0rem 1rem !important
     min-width: 95% !important
     .columns
       width: 100%
 
     .login-form
+      width: 95%
       margin-top: 2rem
+      padding: 1rem
+      border: 0
 
     #gradecraft-auth
       padding-top: .5rem
@@ -62,4 +77,7 @@ section.login
       margin-bottom: 1rem
 
     #password-forgot
-      width: 84%
+      width: 95%
+      padding: 1rem
+      margin-left: 0
+      border: 0
