fix HAML escaping issues across all mailers, fix some bugs in announcement mailer spec

--- a/app/views/exports_mailer/exports_layout.html.haml
+++ b/app/views/exports_mailer/exports_layout.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "width=device-width", :name => "viewport"}/
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title= @page_title
+    %title= @page_title rescue "GradeCraft Files Exported"
     :css
       = GradeCraft::Application.assets["mailer.css"].to_s.html_safe
 
