--- a/app/views/notification_mailer/grade_released.html.haml
+++ b/app/views/notification_mailer/grade_released.html.haml
@@ -5,7 +5,7 @@
   %strong You've got a new grade!
 %h3{:align => "center"}
   You can now check your
-  %strong \#{ @assignment.name }
+  %strong #{ @assignment.name }
   grade.
 %p
 %hr/
