--- a/app/views/announcement_mailer/announcement_email.html.haml
+++ b/app/views/announcement_mailer/announcement_email.html.haml
@@ -1,19 +1,19 @@
 %p{:align => "center"}
   %a{:href => "http://gradecraft.com", :target => "_blank"}
-    \=image_tag "gradecraft_logo.png", width: "207", alt: "", border: "0"
+    =image_tag "gradecraft_logo.png", width: "207", alt: "", border: "0"
 %h2{:align => "center"}
-  %strong \#{@announcement.course.name} Announcement
+  %strong #{@announcement.course.name} Announcement
 %p
-  Hello, \#{@student.first_name}
+  Hello, #{@student.first_name}
 %p
-  %em \#{@announcement.author.public_name} has the following announcement:
-\============================================================
+  %em #{@announcement.author.public_name} has the following announcement:
+============================================================
 %p
-  \\#{@announcement.abstract.html_safe}
-  \= precede "..." do
-  \= link_to "more", announcement_url(@announcement)
-\============================================================
+  = @announcement.abstract.html_safe
+  = precede "..." do
+    = link_to "more", announcement_url(@announcement)
+============================================================
 %p{:align => "center"}
   To read more, please visit
-  \= link_to announcement_url(@announcement), announcement_url(@announcement)
+  = link_to announcement_url(@announcement), announcement_url(@announcement)
 %hr/
