--- a/app/views/announcement_mailer/announcement_layout.html.haml
+++ b/app/views/announcement_mailer/announcement_layout.html.haml
@@ -21,13 +21,13 @@
                 %td
                   %p{:align => "center"}
                     %a{:alt => "GradeCraft on Facebook", :href => "http://facebook.com/gradecraft"}
-                      \=image_tag "facebook500.png", alt: "", width: "40"
+                      =image_tag "facebook500.png", alt: "", width: "40"
                     %a{:alt => "GradeCraft on Twitter", :href => "http://twitter.com/gradecraft"}
-                      \=image_tag "twitter.png", alt: "", width: "40"
+                      =image_tag "twitter.png", alt: "", width: "40"
                     %a{:alt => "GradeCraft on YouTube", :href => "http://www.youtube.com/playlist?list=PL8pE6w-B6iSUjSjK5cR0yaC1xxvQmLe5m"}
-                      \=image_tag "youtube.png", alt: "", width: "40"
+                      =image_tag "youtube.png", alt: "", width: "40"
                   %p{:style => "text-transform:uppercase; font-size: 10px; text-align: center;"}
-                    ©2012-\#{Date.today.year} Regents of The University of Michigan
+                    ©2012-#{Date.today.year} Regents of The University of Michigan
                   %p{:align => "center"}
                     %strong
                       %a{:href => "mailto:help@gradecraft.com", :style => "color:#00BD39; text-decoration:none"} help@gradecraft.com
