--- a/app/views/notification_mailer/notification_layout.html.haml
+++ b/app/views/notification_mailer/notification_layout.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "width=device-width", :name => "viewport"}/
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title Badge Award
+    %title= @page_title rescue "GradeCraft Notification"
     :css
       = GradeCraft::Application.assets["mailer.css"].to_s.html_safe
 
