--- a/app/views/notification_mailer/updated_submission.html.haml
+++ b/app/views/notification_mailer/updated_submission.html.haml
@@ -2,12 +2,12 @@
   %a{:href => "http://gradecraft.com", :target => "_blank"}
     %img{:alt => "", :border => "0", :src => "https://www.gradecraft.com/images/gradecraft_logo.png", :width => "207"}/
 %h2{:align => "center"}
-  %strong Congratulations \#{ @user.first_name }!
-%h3{:align => "center"} You successfully updated your submission for \#{ @assignment.name } on \#{ @submission.submitted_at }.
+  %strong Congratulations #{ @user.first_name }!
+%h3{:align => "center"} You successfully updated your submission for #{ @assignment.name } on #{ @submission.submitted_at }.
 %p
 %hr/
 %p{:align => "center"}
-  Check out what other \#{ @course.assignment_term.pluralize.downcase } you can complete in \#{ @course.name }
+  Check out what other #{ @course.assignment_term.pluralize.downcase } you can complete in #{ @course.name }
   = succeed "." do
     %a{:href => "https://www.gradecraft.com/predictor"} here
 %hr/
