--- a/app/views/layouts/navigation/_login_nav.haml
+++ b/app/views/layouts/navigation/_login_nav.haml
@@ -1,3 +1,3 @@
 .login-buttons
-  = link_to "Log in with UM", "https://weblogin.umich.edu", :class => "um-login button"
+  = link_to "Log in with UM", "https://www.gradecraft.com/saml/init", :class => "um-login button"
   = link_to "Log in via GradeCraft", new_user_session_path, :class => "gc-login button"
