add spec for notification mailer, refactor some old hash syntax in notification mailer

--- a/app/views/notification_mailer/lti_error.text.haml
+++ b/app/views/notification_mailer/lti_error.text.haml
@@ -1,16 +1,16 @@
-Hey Cait!
+Hey-o GradeCraft Admin!!
 
 I had a problem authenticating this user/course via LTI:
 
 **User Info**
 Name: #{ @user[:name] }
 Email: #{ @user[:email] }
-LTI UID: #{ @user[:uid] }
+LTI UID: #{ @user[:lti_uid] }
 
 **Course Info**
 Name: #{ @course[:name] }
-LTI UID: #{ @course[:uid] }
+LTI UID: #{ @course[:lti_uid] }
 
-I'm so sorry,
+It is the end of days. Woe is me,
 
 The GradeCraft Server
