finish/pass spec for lti_error notification_mailer

--- a/app/views/notification_mailer/lti_error.text.haml
+++ b/app/views/notification_mailer/lti_error.text.haml
@@ -3,13 +3,13 @@ Hey-o GradeCraft Admin!!
 I had a problem authenticating this user/course via LTI:
 
 **User Info**
-Name: #{ @user[:name] }
-Email: #{ @user[:email] }
-LTI UID: #{ @user[:lti_uid] }
+Name: #{ @user.name }
+Email: #{ @user.email }
+LTI UID: #{ @user.lti_uid }
 
 **Course Info**
-Name: #{ @course[:name] }
-LTI UID: #{ @course[:lti_uid] }
+Name: #{ @course.name }
+LTI UID: #{ @course.lti_uid }
 
 It is the end of days. Woe is me,
 
