move notification mailer specs into dedicated specs/mailers/notification_mailer directory, refactor lti and kerberos mailers with better syntax to avoid confusion over what's being passed in from the sessions controller

--- a/app/views/notification_mailer/kerberos_error.text.haml
+++ b/app/views/notification_mailer/kerberos_error.text.haml
@@ -1,10 +1,11 @@
-Hey Cait!
+Hey-o GradeCraft Admin!!
 
-I had a problem authenticating this user/course via Kerberos:
+I had a problem authenticating this user via Kerberos:
 
 **User Info**
-Uniqname: #{ @user[:uid] } 
+UID: #{@kerberos_uid}
 
-I'm so sorry,
+It is the end of days. Woe is me,
 
 The GradeCraft Server
+
