--- a/app/views/notification_mailer/grade_export.text.haml
+++ b/app/views/notification_mailer/grade_export.text.haml
@@ -1,7 +1,7 @@
-Dear #{ @user.first_name },
+Dear #{@user.first_name},
 
-The grade export you requested for #{ @course.name } is attached.
+The grade export you requested for #{@course.name} is attached.
 
 Thanks,
 
-GradeCraft
+The GradeCraft Team
