--- a/app/views/notification_mailer/successful_submission.html.haml
+++ b/app/views/notification_mailer/successful_submission.html.haml
@@ -7,7 +7,7 @@
 %p
 %hr/
 %p{:align => "center"}
-  Check out what other #{ @course.assignment_term.pluralize.downcase } you can complete in \#{ @course.name }
+  Check out what other #{ @course.assignment_term.pluralize.downcase } you can complete in #{ @course.name }
   = succeed "." do
     %a{:href => "https://www.gradecraft.com/predictor"} here
 %hr/
