completed specs for submission emails to professors and students

--- a/app/views/notification_mailer/new_submission.text.haml
+++ b/app/views/notification_mailer/new_submission.text.haml
@@ -1,5 +1,7 @@
 Hi Professor #{ @professor.last_name },
 
-#{ @user.first_name } #{ @user.last_name } has submitted their #{ @assignment.name }. 
+#{ @student.first_name } #{ @student.last_name } has submitted their #{ @course.assignment_term.downcase } "#{ @assignment.name }" for course #{ @course.name }. 
 
-GradeCraft
+Please visit https://www.gradecraft.com to view the submission.
+
+The GradeCraft Team
