--- a/app/views/notification_mailer/revised_submission.text.haml
+++ b/app/views/notification_mailer/revised_submission.text.haml
@@ -1,5 +1,7 @@
 Hi Professor #{ @professor.last_name },
 
-#{ @user.first_name } #{ @user.last_name } has updated their #{ @assignment.name } submission. 
+#{ @student.first_name } #{ @student.last_name } has revised their #{ @course.assignment_term.downcase } "#{ @assignment.name }" for course #{ @course.name }. 
 
-GradeCraft
+Please visit https://www.gradecraft.com to view the revised submission.
+
+The GradeCraft Team
