building out group specs for sending emails to an entire group

--- a/app/views/notification_mailer/group_created.text.haml
+++ b/app/views/notification_mailer/group_created.text.haml
@@ -1,5 +1,8 @@
 Hi Professor #{ @professor.last_name },
 
-You have a new group to review!
+You have a new group to review in course #{ @course.name }!
 
-GradeCraft
+You can learn more about it at https://www.gradecraft.com.
+
+Sincerely,
+The GradeCraft Team
