--- a/app/views/notification_mailer/group_status_updated.text.haml
+++ b/app/views/notification_mailer/group_status_updated.text.haml
@@ -1,5 +1,8 @@
-Your group, #{ @group.name } has been #{ @group.approved }. Log in to read your feedback. 
+#{ @student.first_name },
+
+Your group, "#{ @group.name }" has been #{ @group.approved } in course #{ @course.name }.
+
+Log in to https://www.gradecraft.com to read your feedback. 
 
 Play on!
-
-GradeCraft
+The GradeCraft Team
