--- a/app/views/notification_mailer/group_notify.text.haml
+++ b/app/views/notification_mailer/group_notify.text.haml
@@ -1,5 +1,7 @@
-I just wanted to let you know that you have been listed as a member of the #{ @group.name } Group. Let your instructor know if this is incorrect. 
+Dear #{ @student.first_name },
+
+You've been added as a member of the #{ @group.name } Group in course #{ @course.name }. Let your instructor know if this is incorrect. 
 
 Play on!
 
-GradeCraft
+The GradeCraft Team
