build out and pass specs for earned badge awarded mailer

--- a/app/views/notification_mailer/earned_badge_awarded.html.haml
+++ b/app/views/notification_mailer/earned_badge_awarded.html.haml
@@ -2,7 +2,7 @@
   %a{:href => "http://gradecraft.com", :target => "_blank"}
     %img{:alt => "", :border => "0", :src => "https://www.gradecraft.com/images/gradecraft_logo.png", :width => "207"}/
 %h2{:align => "center"}
-  %strong Congratulations #{ @user.first_name }!
+  %strong Congratulations #{ @student.first_name }!
 %p{:align => "center"}
   %img{:src => "#{@earned_badge.badge.icon}", :width => "150"}/
 %h3{:align => "center"}
@@ -11,11 +11,11 @@
   #{ @course.badge_term }.
 %p{:align => "center"}
   - if @earned_badge.feedback.present?
-  %br/
-  %em Your instructor said:
-%p
-%div{:align => "center"}
-  = @earned_badge.feedback.html_safe
+    %br/
+    %em Your instructor said:
+    %p
+    %div{:align => "center"}
+      = @earned_badge.feedback.html_safe
 %p
 %hr/
 %p{:align => "center"}
