--- a/app/views/notification_mailer/earned_badge_awarded.text.haml
+++ b/app/views/notification_mailer/earned_badge_awarded.text.haml
@@ -1,4 +1,4 @@
-Congratulations #{ @user.first_name }!
+Congratulations #{ @student.first_name }!
 You've earned the #{ @earned_badge.badge.name } #{ @course.badge_term }.
 
 Check out what other #{ @course.badge_term.pluralize } you can earn in #{ @course.name.html_safe } here: 
