--- a/app/views/exports_mailer/submissions_export_success.html.haml
+++ b/app/views/exports_mailer/submissions_export_success.html.haml
@@ -2,13 +2,13 @@
   %a{:href => "http://gradecraft.com", :target => "_blank"}
     %img{:alt => "", :border => "0", :src => "https://www.gradecraft.com/images/gradecraft_logo.png", :width => "207"}/
 %h2{:align => "center"}
-  %strong Dear #{ @user.first_name },
-%h3{:align => "center"} Your requested submissions export for #{ @assignment.name } failed to complete.
+  %strong Dear #{ @professor.first_name },
+
+%h3{:align => "center"} Your requested submissions export for #{ @assignment.name } was successfully created.
+
 %p
 %p{:align => "center"}
-  Our system administrators have been notified of the problem. You may additionally send an email to
-  %a{:href => "mailto: #{ ADMIN_EMAIL }"} #{ADMIN_EMAIL}
-  if you'd like.
-%p Sincerely,
-%p The GradeCraft Team
+  You can download your completed #{@archive_format} archive
+  = succeed "." do
+    %a{:href => "#{ @final_archive_path }"} here
 %hr/
