--- a/app/views/exports_mailer/submissions_export_failure.text.haml
+++ b/app/views/exports_mailer/submissions_export_failure.text.haml
@@ -1,8 +1,8 @@
 Dear #{ @professor.first_name },
 
-Your requested submissions export for #{ @assignment.name } failed to complete.
+%h3{:align => "center"} Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" in course #{ @course.name } failed to complete.
 
-Our system administrators have been notified of the problem. You may send an email to #{ ADMIN_EMAIL } if you'd like.
+Our system administrators have been notified of the problem, but you may send an additional email to #{ExportsMailer::ADMIN_EMAIL} if you'd like.
 
 Sincerely,
 The GradeCraft Team
