initial pass at adding team submissions mailer templates, add specs for team submissions mailer templates

--- a/app/views/exports_mailer/submissions_export_success.text.haml
+++ b/app/views/exports_mailer/submissions_export_success.text.haml
@@ -5,4 +5,4 @@ Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.n
 You can download your completed #{@archive_data[:format].upcase} archive here: #{ @archive_data[:url] }.
 
 Sincerely,
-GradeCraft
+The GradeCraft Team
