--- a/app/views/exports_mailer/team_submissions_export_failure.text.haml
+++ b/app/views/exports_mailer/team_submissions_export_failure.text.haml
@@ -1,6 +1,6 @@
 Dear #{ @professor.first_name },
 
-Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" in course #{ @course.name } failed to complete.
+Your requested submissions export of #{ @course.assignment_term.downcase} "#{ @assignment.name } in course #{ @course.name } failed to complete for  #{ @course.team_term.downcase } #{ @team.name }.
 
 Our system administrators have been notified of the problem, but you may send an additional email to #{ExportsMailer::ADMIN_EMAIL} if you'd like.
 
