UI to enabled/disable checkbox if select internal students

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -86,6 +86,10 @@ ul.accepts_submission_types
 .grade-scheme-row:hover .add-element
   display: block
 
+.disabled
+  color: $color-grey-3
+  opacity: 0.7
+
 .form_label
   font-size: 80%
   line-height: 130%
