--- a/app/views/users/import.html.haml
+++ b/app/views/users/import.html.haml
@@ -16,8 +16,11 @@
 
   = form_tag({:action => :upload}, :multipart => true) do
     %div
-      = check_box_tag 'internal_students'
+      = check_box_tag 'internal_students', '1', false, { data: { behavior: 'toggle-disable', 'toggle-disable-target': '.send-welcome *' }}
       = label_tag 'internal_students', 'Use UM Authentication for the new user accounts'
+    .send-welcome
+      = check_box_tag 'send_welcome', '1', false, { disabled: true }
+      = label_tag 'send_welcome', 'Send welcome email to new user accounts', { class: 'disabled' }
     = file_field_tag 'file'
     = submit_tag("Import")
 
