--- a/app/views/grades/_individual_show.html.haml
+++ b/app/views/grades/_individual_show.html.haml
@@ -35,7 +35,7 @@
           %li
             = link_to gf.filename, gf.url, :target => "_blank"
 
-  - if presenter.rubric_available?
+  - if presenter.rubric_designed?
     .rubric-container= render partial: 'grades/rubric_grade_results', locals: { presenter: presenter }
 
   .right
