--- a/app/views/grades/_rubric_edit.html.haml
+++ b/app/views/grades/_rubric_edit.html.haml
@@ -60,7 +60,7 @@
               {{tier.description}}
             .row.badge-row
               .tier-badge-image(ng-repeat="(tierBadgeId, tierBadge) in tier.badges")
-                %img(src="{{tierBadge.badge.icon}}" height="50px")
+                %img(ng-src="{{tierBadge.badge.icon}}" height="50px")
               .clear
           %td.filler(ng-show="metric.tiers.length < #{@rubric.max_tier_count}" colspan="{{#{@rubric.max_tier_count} - metric.tiers.length}}")
           %td.comments-box
@@ -92,6 +92,6 @@
               %option(value="" disabled) Select grade status for this submission...
             .align-right.form_label Can the student see this grade?
 
-    .clear 
+    .clear
     .right
       %button#submit-grade(ng-click="submitGrade()" ng-disabled="selectedTiers().length == 0") Submit Grade
