--- a/app/views/grades/standard_edit/_badges_awarded.html.haml
+++ b/app/views/grades/standard_edit/_badges_awarded.html.haml
@@ -6,7 +6,7 @@
 
   .grade-badge.hexagon.awarded(title="{{badge.point_total}} Points: {{badge.description}}" ng-repeat="badge in badges" ng-class="{unearned: badge.unearned(), earned: badge.earned()}" ng-click="badge.deleteEarnedStudentBadge()" hide-after-fade)
 
-    %img(src="{{badge.icon}}" alt="You've earned the {{badge.name}} badge" class="earned")
+    %img(ng-src="{{badge.icon}}" alt="You've earned the {{badge.name}} badge" class="earned")
 
     .ribbon
       .ribbon-stitches-top
@@ -17,4 +17,4 @@
     .gold-stars
       %i.fa.fa-star.fa-fw
         .earned-count {{badge.totalEarnedBadges()}}
-      .badges-earned.blue 
+      .badges-earned.blue
