--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
       = "#{@title.titleize} - " if @title
       = current_course.try(:name) || 'GradeCraft'
     = stylesheet_link_tag "application", :media => "all"
+    = render 'layouts/favicon'
     = csrf_meta_tags
     = yield(:head)
 
