Add export type parameter to notification mailer gradebook export

--- a/app/views/notification_mailer/gradebook_export.text.haml
+++ b/app/views/notification_mailer/gradebook_export.text.haml
@@ -1,6 +1,6 @@
 Dear #{ @user.first_name },
 
-The gradebook export you have requested for #{ @course.name } is attached.
+The #{ @export_type } you have requested for #{ @course.name } is attached.
 
 Thanks,
 
