Responsive design on homepage

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -204,6 +204,14 @@ a:hover + .display_on_hover
   .mainContainer, .student.mainContent
     width: 100% !important
 
+  .footer
+    width: 100% !important
+
+    .small-12.medium-2.columns
+      width: 100%
+      margin: 1rem 0 
+      padding: 0 1rem 
+
   .student.mainContent
     margin-top: 0
     
