--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -3,7 +3,7 @@
     clear: both
     position: relative
     margin: 0 auto
-    padding: 2rem   
+    padding: 1rem   
     min-height: 400px
     height: auto
     opacity: .8
@@ -69,6 +69,9 @@
         min-height: 320px
         height: auto
 
+    .twitter iframe
+      height: 400px !important
+
   .alert-bkg
     width: 100% !important
     margin: -1rem 0
@@ -80,19 +83,22 @@
 @media (max-width: $media-small-max)
 
   .homepage
-    margin-top: 3rem
+    margin: 3rem 0 0 
 
     section    
+      margin: 0
       width: 100%
       font-size: .7rem
       padding: 0rem
       height: auto
 
-      &.video-promo
+      &.video-promo 
+        margin: 0
         padding-top: 0rem !important
-        padding-bottom: 2rem
+        padding-bottom: 5rem
 
-      &.newsletter
+      &.newsletter 
+        margin: 0
         padding: 0 0 1rem
 
       h1
@@ -102,13 +108,13 @@
         margin: 0 0 .25rem
 
       .columns
-        width: 100%
+        margin: 0
+        padding: 1rem
+        width: 90%
         clear: both
 
         &.text
           font-size: .7rem
-          margin: 0
-          padding: 1rem
 
           h1 
             margin-top: 2rem
@@ -132,6 +138,9 @@
           h1
             margin-top: .5rem
 
-        &.twitter iframe
-          width: 100%
-          clear: both
+        &.twitter 
+          background-color: $color-blue-0
+          iframe
+            clear: both
+            height: 200px !important
+            width: 100%
