--- a/app/views/home/_press_and_social_media.haml
+++ b/app/views/home/_press_and_social_media.haml
@@ -5,4 +5,4 @@
 			= render 'articles'
 
 	.columns.twitter.one-third
-		<a class="twitter-timeline" height="400" href="https://twitter.com/gradecraft" data-widget-id="631826460190351361">Tweets by @gradecraft</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		<a class="twitter-timeline" href="https://twitter.com/gradecraft" data-widget-id="631826460190351361">Tweets by @gradecraft</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
