Add numericScore sortable column for nofeatures_default_last_name_dynatable

--- a/app/views/assignments/individual/_table_head.html.haml
+++ b/app/views/assignments/individual/_table_head.html.haml
@@ -6,7 +6,7 @@
 
   // If 'Score' only if the assignment type is not student_weightable
   - if !presenter.assignment_type.student_weightable? && !presenter.assignment.pass_fail?
-    %th{:scope => "col"} Score
+    %th{:scope => "col", "data-dynatable-sorts" => "numericScore"} Score
   - elsif presenter.assignment_type.student_weightable?
     %th{:scope => "col"} Raw Score
     %th{:scope => "col"} Multiplied Score
