Buttons on grading status page

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -53,6 +53,7 @@
 thead
   .button
     border: none
+    padding: .3rem
     background-color: $color-blue-1
     &:hover
       background-color: $color-blue-3
