--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -11,8 +11,9 @@ table
 
   td
     border-bottom: 1px solid $color-grey-3
-    &.center
-      text-align: 0
+  
+  td .center
+    text-align: center !important
 
   thead
     background-color: $color-blue-0
