--- a/app/views/info/_ungraded_submissions_table.haml
+++ b/app/views/info/_ungraded_submissions_table.haml
@@ -5,7 +5,7 @@
 - @ungraded_submissions_by_assignment.each do |assignment, submissions|
   %h4.assignment_name
     = link_to assignment.name, assignment
-    = link_to 'Quick Grade', mass_grade_assignment_path(assignment), :class => "button"
+    = link_to raw("<i class='fa fa-check fa-fw'></i> Quick Grade"), mass_grade_assignment_path(assignment), :class => "button"
   %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "ungradedTableCaption"}
     %thead
       %tr
