--- a/app/views/users/edit_profile.html.haml
+++ b/app/views/users/edit_profile.html.haml
@@ -49,5 +49,5 @@
       .submit-buttons
         %ul
           %li= submit_tag 'Update Settings', :class => 'button'
-          %li= link_to 'Cancel', root_path, :class => 'button'
+          %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), root_path, :class => 'button'
       %br
