--- a/app/views/assignment_type_weights/mass_edit.html.haml
+++ b/app/views/assignment_type_weights/mass_edit.html.haml
@@ -33,7 +33,7 @@
       .submit-buttons
         %ul
           %li= f.button :submit, "Update #{term_for :weights}"
-          %li= link_to 'Cancel', current_user_is_student? ? dashboard_path : choices_students_path, class: 'button'
+          %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), current_user_is_student? ? dashboard_path : choices_students_path, class: 'button'
 
   - else
     %h3 Your #{term_for :weight} choices:
