--- a/app/views/assignments/_form.haml
+++ b/app/views/assignments/_form.haml
@@ -192,4 +192,4 @@
   .submit-buttons
     %ul
       %li= f.button :submit, "#{@assignment.persisted? ? 'Update' : 'Create'} #{term_for :assignment}"
-      %li= link_to 'Cancel', assignments_path, :class => "button"
+      %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), assignments_path, :class => "button"
