--- a/app/views/challenge_grades/_form.html.haml
+++ b/app/views/challenge_grades/_form.html.haml
@@ -25,4 +25,4 @@
   .submit-buttons
     %ul
       %li= f.button :submit, "#{ @challenge_grade.persisted? ? 'Update Grade' : 'Submit Grade'}"
-      %li= link_to 'Cancel', challenges_path, :class => 'button'
+      %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), challenges_path, :class => 'button'
