--- a/app/views/courses/timeline_settings.html.haml
+++ b/app/views/courses/timeline_settings.html.haml
@@ -28,4 +28,4 @@
                 %td= af.text_field :media_caption
       .submit-buttons
         = f.button :submit, "Update Settings", :class => "button"
-        = link_to 'Cancel', dashboard_path, :class => "button"
+        = link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), dashboard_path, :class => "button"
