--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -23,4 +23,4 @@
   .submit-buttons
     %ul
       %li= f.button :submit, :class => "button"
-      %li= link_to 'Cancel', events_path, :class => 'button'
+      %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), events_path, :class => 'button'
