--- a/app/views/grades/group_edit.html.haml
+++ b/app/views/grades/group_edit.html.haml
@@ -40,4 +40,4 @@
     .submit-buttons
       %ul
         %li= f.button :submit, "Submit Grades", :class => "button"
-        %li= link_to 'Cancel', assignment_path(@assignment), :class => 'button'
+        %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), assignment_path(@assignment), :class => 'button'
