--- a/app/views/courses/timeline_settings.html.haml
+++ b/app/views/courses/timeline_settings.html.haml
@@ -11,7 +11,7 @@
       %table
         %thead
           %tr
-            %th= "#{term_for :assignment}"
+            %th{:style => "min-width: 200px"}= "#{term_for :assignment}"
             %th Image/Video
             %th Thumbnail
             %th Media Credit
@@ -27,5 +27,6 @@
                 %td= af.text_field :media_credit
                 %td= af.text_field :media_caption
       .submit-buttons
-        = f.button :submit, "Update Settings", :class => "button"
-        = link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), dashboard_path, :class => "button"
+        %ul
+          %li= f.button :submit, "Update Settings", :class => "button"
+          %li= link_to raw("<i class='fa fa-times-circle fa-fw'></i> Cancel"), dashboard_path, :class => "button"
