--- a/app/views/staff/show.html.haml
+++ b/app/views/staff/show.html.haml
@@ -20,7 +20,7 @@
         %th Feedback
         %th Created at
         %th Last Updated
-        %th
+        %th{:style => "min-width: 120px"}
     %tbody
       - @grades.each do |grade|
         %tr
