--- a/app/views/teams/_stats.haml
+++ b/app/views/teams/_stats.haml
@@ -10,7 +10,7 @@
       %th #{term_for :team_leaders}
       - if current_user_is_staff? && current_course.has_badges?
         %th{ "data-dynatable-column" => "badges"} #{term_for :badges} Earned
-      %th{:style => "min-width: 200px"}
+      %th{:style => "min-width: 260px"}
   %tbody
     - @teams.order_by_high_score.each_with_index do |team, index|
       %tr
@@ -28,6 +28,6 @@
         %td
           .right
             %ul.button-bar
-              %li= link_to raw("<i class='fa fa-dashboard fa-fw'> </i> See"), team, :class => 'button'
-              %li= link_to raw("<i class='fa fa-edit fa-fw'> </i> Edit"), edit_team_path(team), :class => 'button'
-              %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete"), team_path(team), :class => 'button', :data => { confirm: 'Are you sure?' }, :method => :delete
+              %li= link_to raw("<i class='fa fa-dashboard fa-fw'> </i> See #{term_for :team}"), team, :class => 'button'
+              %li= link_to raw("<i class='fa fa-edit fa-fw'> </i> Edit #{term_for :team}"), edit_team_path(team), :class => 'button'
+              %li= link_to raw("<i class='fa fa-trash fa-fw'> </i> Delete #{term_for :team}"), team_path(team), :class => 'button', :data => { confirm: 'Are you sure?' }, :method => :delete
