--- a/app/views/exports_mailer/submissions_export_success.text.haml
+++ b/app/views/exports_mailer/submissions_export_success.text.haml
@@ -1,8 +1,8 @@
 Dear #{ @professor.first_name },
 
-Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" was successfully created for course #{ @course.name }.
+Your requested export for #{ @course.assignment_term.downcase} "#{ @assignment.name }" in course #{ @course.name } is being created.
 
-You can download your completed #{@archive_data[:format].upcase} archive here: #{ @archive_data[:url] }.
+You'll be notified when your #{@archive_data[:format].upcase} is ready to download.
 
 Sincerely,
 The GradeCraft Team
