Removed duplicate form view

--- a/app/views/layouts/_unlock_condition_fields.haml
+++ b/app/views/layouts/_unlock_condition_fields.haml
@@ -1,5 +1,5 @@
 .conditions
-  = "Requirement"
+  %h4 Requirement
   .assignment-or-badge
     = f.input :condition_type, :collection => ["Assignment", "Badge"], :label => "Type"
   #assignments-list{:style => "display: none"}
