--- a/app/views/badges/_form.haml
+++ b/app/views/badges/_form.haml
@@ -45,11 +45,11 @@
         %script(id="unlock-condition-template" type="text/x-template")
           %fieldset.unlock-condition
             = f.simple_fields_for :unlock_conditions, UnlockCondition.new, class: 'form-inline', child_index: 'child_index' do |ucf|
-              = render 'unlock_condition_fields', f: ucf
+              = render 'layouts/unlock_condition_fields', f: ucf
         - @badge.unlock_conditions.each do |condition|
           %fieldset.unlock-condition
             = f.simple_fields_for :unlock_conditions, condition, class: 'form-inline' do |ucf|
-              = render 'unlock_condition_fields', f: ucf
+              = render 'layouts/unlock_condition_fields', f: ucf
       = link_to 'Add a Condition', '#', class: 'add-unlock-condition button'
 
   %section
